将 /mgc 和 /mgcop 改为 Brigadier 实现
DefaultGameManager 接口声明了（只读）获取所有注册的游戏名的方法